<resources>
    <string name="backup_readings_error">Backup Error</string>
    <string name="about_header_info">INFO</string>
    <string name="about_header_feedback">FEEDBACK</string>
    <string name="about_body_feedback">Keep updates coming by rating the app, your feedback is most welcome. Try out my other Apps on Google Play.</string>
    <string name="about_button_rate">RATE THIS APP</string>
    <string name="about_button_facebook">GET MORE APPS</string>
    <string name="about_button_legal">Legal Notices</string>
    <string name="about_no_market_app">Unable to find market app</string>
    <string name="about_header_go_pro">Go Pro</string>
    <string name="about_body_go_pro">Get the Ad free version of the app from the Google Play Store. Enjoy more screen space, the way the app is meant to be.</string>
    <string name="about_button_go_pro">GO PRO</string>
    <string name="menu_settings">Settings</string>
    <string name="title_main">Weight Tracker</string>
    <string name="title_chart">Chart</string>
    <string name="title_list">Readings</string>
    <string name="title_new">New Weight</string>
    <string name="title_edit">Edit Weight</string>
    <string name="title_import">Import Readings</string>
    <string name="title_report">Report</string>
    <string name="title_about">About Weight Tracker</string>
    <string name="title_help">Help</string>
    <string name="title_settings">Settings</string>
    <string name="title_welcome">Welcome</string>
    <string name="chart_notenoughdata_title">Not Enough Readings</string>
    <string name="chart_notenoughdata_message">You have less than 3 readings, the chart will show example data. </string>
    <string name="chart_xaxis_title">Date</string>
    <string name="chart_yaxis_title">Weight</string>
    <string name="chart_share_chooser_title">Share Chart</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="main_btn_enter">New</string>
    <string name="main_btn_edit">Edit</string>
    <string name="main_btn_chart">Chart</string>
    <string name="main_btn_report">Report</string>
    <string name="main_btn_settings">Settings</string>
    <string name="main_btn_shop">Shop</string>
    <string name="main_btn_help">Help</string>
    <string name="edit_weight_hint">Enter weight</string>
    <string name="edit_comment_hint">Enter comment</string>
    <string name="edit_weight_error">Please enter weight</string>
    <string name="edit_no_speech">Your device does not support speech to text</string>
    <string name="edit_speak_prompt_weight">Speak your weight</string>
    <string name="edit_speak_prompt_comment">Speak your comment</string>
    <string name="addreading_stay_on_the_screen">Stay on the screen</string>
    <string name="addreading_tip">Use the +/- buttons to adjust or press the center button to edit. When done, press the Add button to record your reading.</string>
    <string name="addreading_added">Reading Added</string>
    <string name="addreading_add_btn">Add</string>
    <string name="addreading_reached_goal_title">Congratulations!</string>
    <string name="addreading_reached_goal_message">You have reached your target weight. Go to Settings and set yourself a new goal.</string>
    <string name="editreading_updated">Reading Updated</string>
    <string name="editreading_deleted">Reading Deleted</string>
    <string name="editreading_update_btn">Update</string>
    <string name="editreading_delete_btn">Delete</string>
    <string name="editreading_delete_dialog_title">Confirm</string>
    <string name="editreading_delete_dialog_message">Are you sure you wish to delete all the readings?</string>
    <string name="menu_main_help">Help</string>
    <string name="menu_main_about">About</string>
    <string name="menu_main_welcome">Show Welcome</string>
    <string name="menu_chart_all">Fit All</string>
    <string name="menu_chart_share">Share</string>
    <string name="menu_chart_30">30 Days</string>
    <string name="menu_chart_60">60 Days</string>
    <string name="menu_chart_90">90 Days</string>
    <string name="menu_chart_year">One Year</string>
    <string name="menu_readings_list_import">Import Readings</string>
    <string name="menu_readings_list_export">Share Readings</string>
    <string name="menu_readings_list_delete_all">Delete All</string>
    <string name="menu_report_export">Share</string>
    <string name="bmi_class_severely_underweight">Severely Underweight</string>
    <string name="bmi_class_underweight">Underweight</string>
    <string name="bmi_class_normal">Normal</string>
    <string name="bmi_class_overweight">Overweight</string>
    <string name="bmi_class_obese1">Obese Class I</string>
    <string name="bmi_class_obese2">Obese Class II</string>
    <string name="bmi_class_obese3">Obese Class III</string>
    <string name="bmi_error">Check height settings</string>
    <string name="readings_bmi_prefix">BMI</string>
    <string name="readings_no_readings_export">No readings to export</string>
    <string name="readings_export_error">Unable to export readings</string>
    <string name="readings_share_chooser_title">Share Readings</string>
    <string name="readings_no_readings_dialog_title">No Readings</string>
    <string name="readings_no_readings_dialog_msg">There are no readings to show. If you would like to import existing readings press the IMPORT button on the menu.</string>
    <string name="report_notenoughdata_title">Not Enough Readings</string>
    <string name="report_notenoughdata_message">You have no readings the report will show example data.</string>
    <string name="report_share_chooser_title">Share Report</string>
    <string name="report_email_subject">Weight Tracker Report</string>
    <string name="report_per_no_readings">No readings available</string>
    <string name="report_per_week">per week</string>
    <string name="report_body_mass_index">Body Mass Index</string>
    <string name="report_latest">Latest</string>
    <string name="report_goal">Goal</string>
    <string name="report_ideal_weight">Ideal Weight</string>
    <string name="report_trends">Trends</string>
    <string name="report_last_7_days">Last 7 Days</string>
    <string name="report_losing">Losing</string>
    <string name="report_gaining">Gaining</string>
    <string name="report_goal_date">Goal Date</string>
    <string name="report_last_30_days">Last 30 Days</string>
    <string name="report_all_time">All Time</string>
    <string name="report_weight">Weight</string>
    <string name="report_stats">Stats</string>
    <string name="report_min_weight">Min</string>
    <string name="report_max_weight">Max</string>
    <string name="report_max_minus_min_weight">Max - Min</string>
    <string name="report_first_weight">First</string>
    <string name="report_last_weight">Last</string>
    <string name="report_first_minus_last_weight">First - Last</string>
    <string name="report_average_weight">Average</string>
    <string name="report_average_bmi">Average BMI</string>
    <string name="report_first_date">Start Date</string>
    <string name="report_last_date">Last Date</string>
    <string name="report_time_spent">Time Spent</string>
    <string name="report_days">days</string>
    <string name="report_number_of_readings">Number of Readings</string>
    <string name="settings_purchase_color_pack_title">Purchase Required</string>
    <string name="settings_purchase_color_pack_message">Please purchase the Color Pack item from the Shop to unlock the background color settings.</string>
    <string name="import_import_button">Import</string>
    <string name="import_load_backup_button">Get Backup Readings</string>
    <string name="import_no_backup_file">No backup available</string>
    <string name="import_error_loading_backup_file">Error loading backup</string>
    <string name="import_hint">Paste readings here</string>
    <string name="import_no_text">Nothing to import</string>
    <string name="import_readings_added">\u0020Readings Added</string>
    <string name="import_dialog_title">Import Help</string>
    <string name="import_dialog_message">
        Press the Get Backup Readings button to load your latest backup readings if available.
        \n\nPress the Import button to merge the readings into the app.
        \n\nSee the help screen for further details.</string>
    <string name="length_unit_metres">Metres</string>
    <string name="length_unit_centimetres">Centimetres</string>
    <string name="length_unit_inches">Inches</string>
    <string name="length_unit_feet">Feet and Inches</string>
    <string name="weight_unit_kilograms">Kilograms</string>
    <string name="weight_unit_pounds">Pounds</string>
    <string name="weight_unit_stones">Stones</string>
</resources>