<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <RadioButton
            android:id="@+id/rbWeightSettingPounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_unit_pounds" />

        <RadioButton
            android:id="@+id/rbWeightSettingKilograms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/weight_unit_kilograms" />

        <RadioButton
            android:id="@+id/rbWeightSettingStones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_unit_stones" />
    </RadioGroup>
    <com.pigdogbay.androidutils.usercontrols.NumberPicker
            android:id="@+id/WeightSettingsGoal"
            android:layout_margin="5dp"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"/>
    
</LinearLayout>